--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- header starts -->
-    <header class="header section">
+    <header class="header default-padding">
       <!-- nav starts -->
       <nav class="nav">
         <h1 class="nav-title title">G3 Architects</h1>
@@ -22,22 +22,56 @@
       </nav>
       <!-- nav ends -->
       <!-- heading starts -->
-      <div class="heading">
+      <section class="heading">
         <div class="heading-info">
           <h2 class="heading-title title">Brand New Group of Architects</h2>
-          <p class="heading-desc">
+          <p class="heading-desc desc">
             There are many variations of passages of Lorem Ipsum available, but
             the majority have suffered alteration in some form, by injected
             humour, or randomised words which don't look even
           </p>
-          <button class="heading-btn">Explore More</button>
+          <button class="heading-btn btn">Explore More</button>
         </div>
         <div class="heading-img">
           <img src="./images/banner.png" alt="Heading Banner" />
         </div>
-      </div>
+      </section>
       <!-- heading ends -->
     </header>
     <!-- header ends -->
+    <!-- main starts -->
+    <main class="main default-padding">
+      <!-- features starts -->
+      <section class="features">
+        <div class="features-images">
+          <div class="features-img">
+            <img src="./images/team1.png" alt="Two Persons Working" />
+          </div>
+          <div class="features-img">
+            <img src="./images/team2.png" alt="Three Persons Standing" />
+          </div>
+          <div class="features-img">
+            <img src="./images/team3.png" alt="Two Persons Working" />
+          </div>
+          <div class="features-img">
+            <img src="./images/team4.png" alt="Two Persons Handshaking" />
+          </div>
+        </div>
+        <div class="features-info">
+          <h2 class="features-title title">
+            <span class="ash">Quick list</span> of Our
+            <span class="orange">Features</span>
+          </h2>
+          <p class="features-desc desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="features-btn btn">Explore More</button>
+        </div>
+      </section>
+      <!-- features starts -->
+    </main>
+    <!-- main ends -->
   </body>
 </html>
