--- a/index.html
+++ b/index.html
@@ -70,7 +70,63 @@
           <button class="features-btn btn">Explore More</button>
         </div>
       </section>
-      <!-- features starts -->
+      <!-- features ends -->
+      <!-- features-lists starts -->
+      <section class="features-lists-container">
+        <div class="features-lists-info">
+          <h2 class="features-lists-title title">
+            Features you will love & enjoy
+          </h2>
+          <p class="features-lists-desc desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <div class="features-lists">
+            <article class="features-list">
+              <h3 class="article-title">Desktop & Mobile Version</h3>
+              <p class="article-desc desc">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article class="features-list">
+              <h3 class="article-title">Drag & Drop Builder</h3>
+              <p class="article-desc desc">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article class="features-list">
+              <h3 class="article-title">Awesome Modern Design</h3>
+              <p class="article-desc desc">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+            <article class="features-list">
+              <h3 class="article-title">Super Easy to Edit</h3>
+              <p class="article-desc desc">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised...........
+              </p>
+            </article>
+          </div>
+        </div>
+        <div class="features-lists-img">
+          <img src="./images/architect.png" alt="An Beautiful Architect" />
+          <div>
+            <button class="experience-btn btn">
+              10+Year <span class="small-text">Experience</span>
+            </button>
+          </div>
+        </div>
+      </section>
+      <!-- features-lists ends -->
     </main>
     <!-- main ends -->
   </body>
