facts added with responsiveness

--- a/index.html
+++ b/index.html
@@ -127,6 +127,39 @@
         </div>
       </section>
       <!-- features-lists ends -->
+      <!-- facts start -->
+      <section class="facts">
+        <div class="facts-info">
+          <h2 class="facts-title title">Some Facts</h2>
+          <p class="facts-desc desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="achievements">
+          <div class="achievement">
+            <img src="./images/icons/ribon.png" alt="Medal" />
+            <p class="number">54</p>
+            <p class="achievement-name">Awards Winnings</p>
+          </div>
+          <div class="achievement">
+            <img src="./images/icons/projects.png" alt="Project" />
+            <p class="number">1458</p>
+            <p class="achievement-name">Project Finished</p>
+          </div>
+          <div class="achievement">
+            <img src="./images/icons/customers.png" alt="Customer" />
+            <p class="number">590</p>
+            <p class="achievement-name">Clients Worked</p>
+          </div>
+          <div class="achievement">
+            <img src="./images/icons/email.png" alt="Email" />
+            <p class="number">22578</p>
+            <p class="achievement-name">Email Send</p>
+          </div>
+        </div>
+      </section>
+      <!-- facts end -->
     </main>
     <!-- main ends -->
   </body>
