sponsors added with responsiveness

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         </div>
       </section>
       <!-- features-lists ends -->
-      <!-- facts start -->
+      <!-- facts starts -->
       <section class="facts">
         <div class="facts-info">
           <h2 class="facts-title title">Some Facts</h2>
@@ -159,7 +159,35 @@
           </div>
         </div>
       </section>
-      <!-- facts end -->
+      <!-- facts ends -->
+      <!-- sponsors starts -->
+      <section class="sponsors">
+        <div class="sponsors-info">
+          <h2 class="sponsor-title title">Our Sponsors</h2>
+          <p class="sponsors-desc desc">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors-logos">
+          <div class="sponsors-logo">
+            <img src="./images/sponsors/spotify.png" alt="Spotify" />
+          </div>
+          <div class="sponsors-logo">
+            <img src="./images/sponsors/amazon.png" alt="Amazon" />
+          </div>
+          <div class="sponsors-logo">
+            <img src="./images/sponsors/google.png" alt="Google" />
+          </div>
+          <div class="sponsors-logo">
+            <img src="./images/sponsors/telerama.png" alt="Telerama" />
+          </div>
+          <div class="sponsors-logo">
+            <img src="./images/sponsors/figma.png" alt="Figma" />
+          </div>
+        </div>
+      </section>
+      <!-- sponsors ends -->
     </main>
     <!-- main ends -->
   </body>
