footer added with responsiveness

--- a/index.html
+++ b/index.html
@@ -190,5 +190,12 @@
       <!-- sponsors ends -->
     </main>
     <!-- main ends -->
+    <!-- footer starts -->
+    <footer class="footer default-margin">
+      <p class="footer-para">
+        All rights reserved copyright@2023 startup landing page design
+      </p>
+    </footer>
+    <!-- footer ends -->
   </body>
 </html>
