bonus section added with responsiveness

--- a/index.html
+++ b/index.html
@@ -188,6 +188,25 @@
         </div>
       </section>
       <!-- sponsors ends -->
+      <!-- some-architecture starts -->
+      <section class="some-architectures">
+        <h2 class="some-architectures-title title">Some Architectures</h2>
+        <div class="architectures">
+          <div class="architecture">
+            <img src="./images/buildings/archi-1.jpg" alt="Building 1" />
+          </div>
+          <div class="architecture">
+            <img src="./images/buildings/archi-2.jpg" alt="Building 2" />
+          </div>
+          <div class="architecture">
+            <img src="./images/buildings/archi-2.jpg" alt="Building 2" />
+          </div>
+          <div class="architecture">
+            <img src="./images/buildings/archi-1.jpg" alt="Building 1" />
+          </div>
+        </div>
+      </section>
+      <!-- some-architecture ends -->
     </main>
     <!-- main ends -->
     <!-- footer starts -->
